[package]
name = "stegasus"
version = "0.1.0"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.13"
anyhow = "1.0.38"
reed-solomon = "0.2.1"
rug = "1.11.0"
